--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -13,5 +12,6 @@
       <p>Connecté en tant que <%= current_user.email%> - <%= link_to('Deconnexion', destroy_user_session_path, :method => :delete) %>  <p>
     <%- end %>
     <%= yield %>
+    <%= javascript_include_tag 'application'%>
   </body>
 </html>
