--- a/app/views/messages/_message_row.html.erb
+++ b/app/views/messages/_message_row.html.erb
@@ -1,14 +1,5 @@
 <tr>
-    <%- if message.uuid %>
-        <td><%= message.uuid %></td>
-        <td><%= message.event_name %></td>
-        <td><%= message.published_at %></td>
-        <td><%= message.sender_id %></td>
-        <td><%= message.data %></td>
-    <%- else %>
-        <td colspan="5"> INVALID : <%= message.raw_content %></td>
-    <%- end %>
-    <td><%= link_to 'Show', message %></td>
-    <td><%= link_to 'Edit', edit_message_path(message) %></td>
+    <td><%= message.created_at %></td>
+    <td><%= message.raw_content %></td>
     <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
