--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,12 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Uuid</th>
-      <th>Event name</th>
-      <th>Published at</th>
-      <th>Sender</th>
-      <th>Data</th>
-      <th colspan="3"></th>
+      <th>Created at</th>
+      <th>Content</th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
